force-app/main/default/objects/GPMS_Extend_PA_Period_Details__c/GPMS_Extend_PA_Period_Details__c.object-meta.xml
<CustomObject>
    <label>Extend PA Period Detail</label>
    <nameField>
        <displayFormat>EX-PA-{0000}</displayFormat>
        <label>Extend PA Period Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Extend PA Period Detail</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>