force-app/main/default/objects/GPMS_Extend_PA_Period_Details__c/fields/ApplicantConsidersLikely__c.field-meta.xml
<CustomField>
    <fullName>ApplicantConsidersLikely__c</fullName>
    <label>Applicant Considers Likely</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Workcompletion</fullName>
                <label>Work on the premises will be substantially finished before the end of the extension period</label>
            </value>
            <value>
                <fullName>Reasonableprogress</fullName>
                <label>Reasonable progress towards the construction of the premises will be made by the end of the extension period</label>
            </value>
            <value>
                <fullName>AmountSpent</fullName>
                <label>A substantial amount will be spent by the approved provider, in connection with the work on the premises, to meet the conditions to which the allocation was subject.</label>
            </value>
            <value>
                <fullName>workproceedingsatisfactorily</fullName>
                <label>If work on the premises has been delayed by circumstances beyond the approved provider’s control – work on the premises will proceed satisfactorily within a reasonable period.</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>