force-app/main/default/objects/GPMS_Extend_PA_Period_Details__c/fields/Application_Received_Date__c.field-meta.xml
<CustomField>
    <fullName>Application_Received_Date__c</fullName>
    <label>Application Received Date</label>
    <type>Date</type>
</CustomField>