force-app/main/default/objects/GPMS_Extend_PA_Period_Details__c/fields/CurrentPAPeriodEndDate__c.field-meta.xml
<CustomField>
    <fullName>CurrentPAPeriodEndDate__c</fullName>
    <label>Current PA Period End Date</label>
    <type>Date</type>
</CustomField>