force-app/main/default/objects/GPMS_Extend_PA_Period_Details__c/fields/DatebecomeOperational__c.field-meta.xml
<CustomField>
    <fullName>DatebecomeOperational__c</fullName>
    <label>Date Become Operational</label>
    <type>Date</type>
</CustomField>