force-app/main/default/objects/GPMS_Extend_PA_Period_Details__c/fields/Decision__c.field-meta.xml
<CustomField>
    <fullName>Decision__c</fullName>
    <label>Decision</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Approved</fullName>
            </value>
            <value>
                <fullName>Not Approved</fullName>
            </value>
            <value>
                <fullName>Withdrawn</fullName>
            </value>
            <value>
                <fullName>Set Aside Decision and Substitute New Decision</fullName>
            </value>
            <value>
                <fullName>Uphold Decision</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>