force-app/main/default/objects/GPMS_Extend_PA_Period_Details__c/fields/Delegate_Name__c.field-meta.xml
<CustomField>
    <fullName>Delegate_Name__c</fullName>
    <label>Delegate Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>