force-app/main/default/objects/GPMS_Extend_PA_Period_Details__c/fields/Event__c.field-meta.xml
<CustomField>
    <fullName>Event__c</fullName>
    <label>Event</label>
    <referenceTo>Event__c</referenceTo>
    <relationshipLabel>Extend PA Period Detail</relationshipLabel>
    <relationshipName>Extend_PA_Period_Detailss</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>