force-app/main/default/objects/GPMS_Extend_PA_Period_Details__c/fields/EventPreviousPage__c.field-meta.xml
<CustomField>
    <fullName>EventPreviousPage__c</fullName>
    <label>Event Previous Page</label>
    <length>255</length>
    <type>Text</type>
</CustomField>