force-app/main/default/objects/GPMS_Extend_PA_Period_Details__c/fields/ExpectedExtendedPAPeriodEndDate__c.field-meta.xml
<CustomField>
    <fullName>ExpectedExtendedPAPeriodEndDate__c</fullName>
    <label>Expected Extended PA Period End Date</label>
    <type>Date</type>
</CustomField>