force-app/main/default/objects/GPMS_Extend_PA_Period_Details__c/fields/ExtensionPeriod__c.field-meta.xml
<CustomField>
    <fullName>ExtensionPeriod__c</fullName>
    <label>Extension Period</label>
    <length>25</length>
    <type>Text</type>
</CustomField>