force-app/main/default/objects/GPMS_Extend_PA_Period_Details__c/fields/Is_Acting_in_position__c.field-meta.xml
<CustomField>
    <fullName>Is_Acting_in_position__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Check box if Acting</label>
    <type>Checkbox</type>
</CustomField>