force-app/main/default/objects/GPMS_Extend_PA_Period_Details__c/fields/Link_to_Documents__c.field-meta.xml
<CustomField>
    <fullName>Link_to_Documents__c</fullName>
    <label>Link to Documents</label>
    <length>100</length>
    <type>Text</type>
</CustomField>