force-app/main/default/objects/GPMS_Extend_PA_Period_Details__c/fields/OperationalEffectiveDate__c.field-meta.xml
<CustomField>
    <fullName>OperationalEffectiveDate__c</fullName>
    <label>Operational Effective Date</label>
    <type>Date</type>
</CustomField>