force-app/main/default/objects/GPMS_Extend_PA_Period_Details__c/fields/PA_Period_Type__c.field-meta.xml
<CustomField>
    <fullName>PA_Period_Type__c</fullName>
    <label>PA Period Type</label>
    <length>25</length>
    <type>Text</type>
</CustomField>