force-app/main/default/objects/GPMS_Extend_PA_Period_Details__c/fields/PremisesBeingBuilt__c.field-meta.xml
<CustomField>
    <fullName>PremisesBeingBuilt__c</fullName>
    <label>Premises Being Built</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>