force-app/main/default/objects/GPMS_Extend_PA_Period_Details__c/fields/Previously_Extended__c.field-meta.xml
<CustomField>
    <fullName>Previously_Extended__c</fullName>
    <inlineHelpText>Have any extensions previously been approved in respect to this allotment?</inlineHelpText>
    <label>Previously Extended</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>