force-app/main/default/objects/GPMS_Extend_PA_Period_Details__c/recordTypes/Cancelled_Extend_PA.recordType-meta.xml
<RecordType>
    <fullName>Cancelled_Extend_PA</fullName>
    <active>true</active>
    <label>Cancelled</label>
</RecordType>