force-app/main/default/objects/GPMS_Extend_PA_Period_Details__c/recordTypes/Record_a_Decision_on_Request_for_Reconsideration.recordType-meta.xml
<RecordType>
    <fullName>Record_a_Decision_on_Request_for_Reconsideration</fullName>
    <active>true</active>
    <label>Record a Decision on Request for Reconsideration</label>
</RecordType>