force-app/main/default/objects/GPMS_Extend_PA_Period_Details__c/recordTypes/Record_AAT_Decision_Extend_PA.recordType-meta.xml
<RecordType>
    <fullName>Record_AAT_Decision_Extend_PA</fullName>
    <active>true</active>
    <label>Record AAT Decision</label>
</RecordType>