force-app/main/default/objects/GPMS_Extend_PA_Period_Details__c/recordTypes/Record_Decision_ExtendPA.recordType-meta.xml
<RecordType>
    <fullName>Record_Decision_ExtendPA</fullName>
    <active>true</active>
    <label>Record Decision</label>
</RecordType>