force-app/main/default/objects/GPMS_Extend_PA_Period_Details__c/recordTypes/Record_Request_for_Reconsideration_by_the_AAT.recordType-meta.xml
<RecordType>
    <fullName>Record_Request_for_Reconsideration_by_the_AAT</fullName>
    <active>true</active>
    <label>Record Request for Reconsideration by the AAT</label>
</RecordType>