force-app/main/default/objects/GPMS_Extend_PA_Period_Details__c/recordTypes/Record_Request_for_Reconsideration_Extend_PA.recordType-meta.xml
<RecordType>
    <fullName>Record_Request_for_Reconsideration_Extend_PA</fullName>
    <active>true</active>
    <label>Record Request for Reconsideration</label>
</RecordType>