force-app/main/default/objects/GPMS_Extend_PA_Period_Details__c/recordTypes/Withdraw_ExtendPA.recordType-meta.xml
<RecordType>
    <fullName>Withdraw_ExtendPA</fullName>
    <active>true</active>
    <label>Withdraw</label>
</RecordType>